forgot password activity view created

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,13 @@
         android:theme="@style/Theme.FitnessApp"
         tools:targetApi="31">
         <activity
-            android:name=".feature.auth.LoginActivity"
+            android:name=".feature.auth.register.view.RegisterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".feature.auth.forgot_password.ForgotPasswordActivity"
+            android:exported="false" />
+        <activity
+            android:name=".feature.auth.login.LoginActivity"
             android:exported="false" />
         <activity
             android:name=".feature.welcome.launch.view.LaunchActivity"
